<resources>
    <!--项目名称-->
    <string name="app_name">BaseMVVMAndroid</string>
    <!-- 首页 -->
    <string name="title_home">首页</string>

    <!-- 我的 -->
    <string name="title_admin">我的</string>
    <string name="logout">退出登录</string>

    <!-- 属性 -->
    <string name="property_label_value">%1$s: %2$s</string>

    <!-- 登录 Login -->
    <string name="login">登录</string>
    <string name="login_account">账号</string>
    <string name="desc_account_icon">账号图标</string>
    <string name="login_password">密码</string>
    <string name="desc_password_icon">密码图标</string>
    <string name="desc_login_logo_icon">登录页标题图标</string>


    <!-- Common -->
    <string name="common_delete">删除</string>
    <string name="common_close">关闭</string>

</resources>